--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,2 +1,7 @@
-@import './components/App.scss';
-@import './components/ListItem.scss';
+@import './base/settings';
+@import './base/base';
+@import './components/content-container';
+@import './components/button';
+@import './components/app.scss';
+@import './components/header';
+@import './components/list-item.scss';
