styling for List

--- a/client/src/styles/components/_header.scss
+++ b/client/src/styles/components/_header.scss
@@ -1,6 +1,7 @@
 .header {
   align-items: center;
   background: $dark;
+  box-shadow: $shadow;
   display: flex;
   justify-content: space-around;
   padding: 2rem 3rem;
