--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,7 +1,6 @@
 @import './base/settings';
 @import './base/base';
-@import './components/content-container';
 @import './components/button';
-@import './components/app.scss';
 @import './components/header';
+@import './components/list';
 @import './components/list-item.scss';
