--- a/client/src/styles/components/_button.scss
+++ b/client/src/styles/components/_button.scss
@@ -1,6 +1,7 @@
 .button {
-  border-radius: 3px;
+  border-radius: 0.3rem;
   font-size: 1.3rem;
+  font-weight: 300;
   padding: 0.5rem;
   text-decoration: none;
   transition: 0.2s linear;
