--- a/client/src/styles/components/_button.scss
+++ b/client/src/styles/components/_button.scss
@@ -2,6 +2,7 @@
   border-radius: 0.3rem;
   font-size: 1.3rem;
   font-weight: 300;
+  outline: none;
   padding: 0.5rem;
   text-decoration: none;
   transition: 0.2s linear;
