--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -5,3 +5,5 @@
 @import './components/list';
 @import './components/list-item.scss';
 @import './components/form';
+@import './components/add';
+@import './components/edit';
